--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
 <script>
   function showAlert() {
     alert("Please click the Explore button.");
+    location.reload();
   }
 
   function toggleNavbar() {
