--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
   <!--navbar-->
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-      <a class="navbar-brand mx-3 fs-2 text-dark" href="./index.html">K</a>
+      <a class="navbar-brand mx-3 fs-2 text-dark" href="https://github.com/kayexnina/kayexnina.github.io/blob/main/index.html">K</a>
       <button class="navbar-toggler" type="button" onclick="toggleNavbar()" aria-controls="navbarNav"
         aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -665,7 +665,7 @@
   <!-- footer -->
   <footer class="footer text-center py-5">
     <div class="container-fluid d-flex justify-content-center">
-      <a href="index.html"><img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/myLogo.png" alt="Logo" class="img-fluid" style="max-width: 150px" /></a>
+      <a href="https://github.com/kayexnina/kayexnina.github.io/blob/main/index.html"><img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/myLogo.png" alt="Logo" class="img-fluid" style="max-width: 150px" /></a>
     </div>
 
     <div class="container-fluid d-flex justify-content-center mt-4">
