--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
   <!--navbar-->
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-      <a class="navbar-brand mx-3 fs-2 text-dark" href="kayexnina.github.io">K</a>
+      <a class="navbar-brand mx-3 fs-2 text-dark" href="https://kayexnina.github.io/index.html">K</a>
       <button class="navbar-toggler" type="button" onclick="toggleNavbar()" aria-controls="navbarNav"
         aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -623,16 +623,16 @@
   <div class="container" id="works">
     <h1 class="display-4 text-center my-5">Recent Works</h1>
     <div class="row justify-content-center">
-    <div class="col-12 col-sm-4 mb-3">
+      <div class="col-12 col-sm-4 mb-3">
         <a href="https://github.com/kayexnina/kayexnina.github.io" class="btn display-3 rounded-1 py-3 px-4"
           style="width: 100%" role="button"><strong>SAM Activity 1: Deploying My GitHub page</strong></a>
       </div>
       <div class="col-12 col-sm-4 mb-3">
-        <a href="https://raw.githubusercontent.com/kayexnina/kayexnina.github.io/ca39b059cab957aedec459f7c6c74ffe6d8f3c60/SAMA02_Cristobal/index.html" class="btn display-3 rounded-1 py-3 px-4" style="width: 100%"
+        <a href="https://kayexnina.github.io/SAMA02_Cristobal/index.html" class="btn display-3 rounded-1 py-3 px-4" style="width: 100%"
           role="button"><strong>SAM Activity 2: SPC Locale</strong></a>
       </div>
       <div class="col-12 col-sm-4 mb-3">
-        <a href="index.html" class="btn display-3 rounded-1 py-3 px-4" style="width: 100%" role="button"><strong>SAM
+        <a href="https://kayexnina.github.io/index.html" class="btn display-3 rounded-1 py-3 px-4" style="width: 100%" role="button"><strong>SAM
             Activity 3: My Github's Landing Page</strong></a>
       </div>
       <div class="col-12 col-sm-4 mb-3">
@@ -665,7 +665,7 @@
   <!-- footer -->
   <footer class="footer text-center py-5">
     <div class="container-fluid d-flex justify-content-center">
-      <a href="kayexnina.github.io"><img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/myLogo.png" alt="Logo" class="img-fluid" style="max-width: 150px" /></a>
+      <a href="https://kayexnina.github.io/index.html"><img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/myLogo.png" alt="Logo" class="img-fluid" style="max-width: 150px" /></a>
     </div>
 
     <div class="container-fluid d-flex justify-content-center mt-4">
