--- a/index.html
+++ b/index.html
@@ -362,7 +362,8 @@
       font-size: 28px;
     }
 
-    .fs-3, #timeline h3{
+    .fs-3,
+    #timeline h3 {
       font-size: 18px !important;
     }
 
@@ -419,7 +420,8 @@
             More</strong></a>
       </div>
       <div class="col-12 col-lg-6 col-md-6 d-none d-lg-flex justify-content-center align-items-center">
-        <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/personal_Image1.png" class="img-fluid" alt="Personal Image" />
+        <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/personal_Image1.png"
+          class="img-fluid" alt="Personal Image" />
       </div>
     </div>
   </div>
@@ -511,19 +513,24 @@
       <div class="collapse" id="programmingLanguages">
         <div class="row justify-content-center">
           <div class="col-6 col-md-2 my-2 mb-3 logo">
-            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/java-logo.png" class="img-fluid" alt="Java Logo" style="max-height: 100px" />
+            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/java-logo.png"
+              class="img-fluid" alt="Java Logo" style="max-height: 100px" />
           </div>
           <div class="col-6 col-md-2 my-2 mb-3 logo">
-            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/c-logo.png" class="img-fluid" alt="C Logo" style="max-height: 100px" />
+            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/c-logo.png"
+              class="img-fluid" alt="C Logo" style="max-height: 100px" />
           </div>
           <div class="col-6 col-md-2 my-2 mb-3 logo">
-            <img src="https://github.com/kayexnina/SAM03_Cristobal/blob/main/cpp-logo.png?raw=true" class="img-fluid" alt="C++ Logo" style="max-height: 100px" />
+            <img src="https://github.com/kayexnina/SAM03_Cristobal/blob/main/cpp-logo.png?raw=true" class="img-fluid"
+              alt="C++ Logo" style="max-height: 100px" />
           </div>
           <div class="col-6 col-md-2 my-2 mb-3 logo">
-            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/csharp.png" class="img-fluid" alt="C# Logo" style="max-height: 100px" />
+            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/csharp.png"
+              class="img-fluid" alt="C# Logo" style="max-height: 100px" />
           </div>
           <div class="col-6 col-md-2 my-2 mb-3 logo">
-            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/python-logo.png" class="img-fluid" alt="Python Logo" style="max-height: 100px" />
+            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/python-logo.png"
+              class="img-fluid" alt="Python Logo" style="max-height: 100px" />
           </div>
         </div>
       </div>
@@ -538,19 +545,24 @@
       <div class="collapse" id="webTechnologies">
         <div class="row justify-content-center">
           <div class="col-6 col-md-2 my-2 mb-3 logo">
-            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/html-logo.png" class="img-fluid" alt="HTML Logo" style="max-height: 100px" />
+            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/html-logo.png"
+              class="img-fluid" alt="HTML Logo" style="max-height: 100px" />
           </div>
           <div class="col-6 col-md-2 my-2 mb-3 logo">
-            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/css-logo.png" class="img-fluid" alt="CSS Logo" style="max-height: 100px" />
+            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/css-logo.png"
+              class="img-fluid" alt="CSS Logo" style="max-height: 100px" />
           </div>
           <div class="col-6 col-md-2 my-2 mb-3 logo">
-            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/js-logo.png" class="img-fluid" alt="JS Logo" style="max-height: 100px" />
+            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/js-logo.png"
+              class="img-fluid" alt="JS Logo" style="max-height: 100px" />
           </div>
           <div class="col-6 col-md-2 my-2 mb-3 logo">
-            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/php-logo.png" class="img-fluid" alt="PHP Logo" style="max-height: 100px" />
+            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/php-logo.png"
+              class="img-fluid" alt="PHP Logo" style="max-height: 100px" />
           </div>
           <div class="col-6 col-md-2 my-2 mb-3 logo">
-            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/sql-logo.png" class="img-fluid" alt="SQL Logo" style="max-height: 100px" />
+            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/sql-logo.png"
+              class="img-fluid" alt="SQL Logo" style="max-height: 100px" />
           </div>
         </div>
       </div>
@@ -565,25 +577,29 @@
       <div class="collapse" id="designApplications">
         <div class="row justify-content-center">
           <div class="col-6 col-md-2 my-2 mb-3 logo">
-            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/photoshop-logo.png" class="img-fluid" alt="Photoshop Logo" style="max-height: 100px" />
+            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/photoshop-logo.png"
+              class="img-fluid" alt="Photoshop Logo" style="max-height: 100px" />
           </div>
           <div class="col-6 col-md-2 my-2 mb-3 logo">
-            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/illustrator-logo.png" class="img-fluid" alt="Illustrator Logo"
-              style="max-height: 100px" />
+            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/illustrator-logo.png"
+              class="img-fluid" alt="Illustrator Logo" style="max-height: 100px" />
           </div>
           <div class="col-6 col-md-2 my-2 mb-3 logo">
-            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/canva-logo.png" class="img-fluid" alt="Canva Logo" style="max-height: 100px" />
+            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/canva-logo.png"
+              class="img-fluid" alt="Canva Logo" style="max-height: 100px" />
           </div>
           <div class="col-6 col-md-2 my-2 mb-3 logo">
-            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/figma-logo.png" class="img-fluid" alt="Figma Logo" style="max-height: 100px" />
+            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/figma-logo.png"
+              class="img-fluid" alt="Figma Logo" style="max-height: 100px" />
           </div>
           <div class="col-6 col-md-2 my-2 mb-3 logo">
-            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/visual-basic-logo.png" class="img-fluid" alt="Visual Basic Logo"
-              style="max-height: 100px" />
+            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/visual-basic-logo.png"
+              class="img-fluid" alt="Visual Basic Logo" style="max-height: 100px" />
           </div>
           <div class="col-6 col-md-2 my-2 logo">
-            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/visual-studio-logo.png" class="img-fluid" alt="Visual Studio Logo"
-              style="max-height: 100px" />
+            <img
+              src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/visual-studio-logo.png"
+              class="img-fluid" alt="Visual Studio Logo" style="max-height: 100px" />
           </div>
         </div>
       </div>
@@ -597,16 +613,20 @@
       <div class="collapse" id="others">
         <div class="row justify-content-center">
           <div class="col-6 col-md-2 my-2 mb-3 logo">
-            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/wordpress-logo.png" class="img-fluid" alt="WordPress Logo" style="max-height: 100px" />
+            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/wordpress-logo.png"
+              class="img-fluid" alt="WordPress Logo" style="max-height: 100px" />
           </div>
           <div class="col-6 col-md-2 my-2 mb-3 logo">
-            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/mongo-logo.png" class="img-fluid" alt="MongoDB Logo" style="max-height: 100px" />
+            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/mongo-logo.png"
+              class="img-fluid" alt="MongoDB Logo" style="max-height: 100px" />
           </div>
           <div class="col-6 col-md-2 my-2 mb-3 logo">
-            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/jira-logo.png" class="img-fluid" alt="Jira Logo" style="max-height: 100px" />
+            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/jira-logo.png"
+              class="img-fluid" alt="Jira Logo" style="max-height: 100px" />
           </div>
           <div class="col-6 col-md-2 my-2 mb-3 logo">
-            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/obs-logo.png" class="img-fluid" alt="OBS Logo" style="max-height: 100px" />
+            <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/obs-logo.png"
+              class="img-fluid" alt="OBS Logo" style="max-height: 100px" />
           </div>
         </div>
       </div>
@@ -628,11 +648,12 @@
           style="width: 100%" role="button"><strong>SAM Activity 1: Deploying My GitHub page</strong></a>
       </div>
       <div class="col-12 col-sm-4 mb-3">
-        <a href="https://kayexnina.github.io/SAM02_Cristobal/index.html" class="btn display-3 rounded-1 py-3 px-4" style="width: 100%"
-          role="button"><strong>SAM Activity 2: SPC Locale</strong></a>
+        <a href="https://kayexnina.github.io/SAM02_Cristobal/index.html" class="btn display-3 rounded-1 py-3 px-4"
+          style="width: 100%" role="button"><strong>SAM Activity 2: SPC Locale</strong></a>
       </div>
       <div class="col-12 col-sm-4 mb-3">
-        <a href="https://kayexnina.github.io/index.html" class="btn display-3 rounded-1 py-3 px-4" style="width: 100%" role="button"><strong>SAM
+        <a href="https://kayexnina.github.io/index.html" class="btn display-3 rounded-1 py-3 px-4" style="width: 100%"
+          role="button"><strong>SAM
             Activity 3: My Github's Landing Page</strong></a>
       </div>
       <div class="col-12 col-sm-4 mb-3">
@@ -665,7 +686,9 @@
   <!-- footer -->
   <footer class="footer text-center py-5">
     <div class="container-fluid d-flex justify-content-center">
-      <a href="https://kayexnina.github.io/index.html"><img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/myLogo.png" alt="Logo" class="img-fluid" style="max-width: 150px" /></a>
+      <a href="https://kayexnina.github.io/index.html"><img
+          src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/myLogo.png" alt="Logo"
+          class="img-fluid" style="max-width: 150px" /></a>
     </div>
 
     <div class="container-fluid d-flex justify-content-center mt-4">
@@ -842,13 +865,13 @@
 
     //Resume
     function downloadResume() {
-    const link = document.createElement('a');
-    link.href = 'https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/main/singlePageResume.pdf';
-    link.download = 'Cristobal, K_Resume.pdf';
-    document.body.appendChild(link);
-    link.click();
-    document.body.removeChild(link); 
-  }
+      const link = document.createElement('a');
+      link.href = 'https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/main/singlePageResume.pdf';
+      link.download = 'Cristobal, K_Resume.pdf';
+      document.body.appendChild(link);
+      link.click();
+      document.body.removeChild(link);
+    }
   </script>
 </body>
 
