--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@
     });
 
 
-    // Learn More
+    // Learn more
     const learnMoreButton = document.querySelector(".btn.display-3");
     const timelineItems = document.querySelectorAll(".timeline-item");
     const items = document.querySelectorAll("#timeline li");
