--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
     </div>
   </div>
 
-  <!-- about -->
+  <!-- About -->
   <section id="timeline">
     <div class="container text-center py-5">
       <h1 class="display-4 text-center">Educational Background</h1>
