--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 </style>
 
 <body>
-  <!--navbar-->
+  <!--Navbar-->
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
       <a class="navbar-brand mx-3 fs-2 text-dark" href="https://kayexnina.github.io/index.html">K</a>
@@ -426,7 +426,7 @@
     </div>
   </div>
 
-  <!-- about -->
+  <!-- About -->
   <section id="timeline">
     <div class="container text-center py-5">
       <h1 class="display-4 text-center">Educational Background</h1>
