--- a/SAM02_Cristobal/index.html
+++ b/SAM02_Cristobal/index.html
@@ -212,6 +212,7 @@
   </script>
 
 <script>
+  //Button
   function showAlert() {
     alert("Please click the Explore button.");
     location.reload();
