add activity 4 in landing page

--- a/index.html
+++ b/index.html
@@ -657,8 +657,8 @@
             Activity 3: My Github's Landing Page</strong></a>
       </div>
       <div class="col-12 col-sm-4 mb-3">
-        <a href="#" class="btn display-3 rounded-1 py-3 px-4" style="width: 100%" role="button"><strong>SAM Activity 4:
-            Title Here</strong></a>
+        <a href="https://kayexnina.github.io/SAM04_Cristobal/index.html" class="btn display-3 rounded-1 py-3 px-4" style="width: 100%" role="button"><strong>SAM Activity 4:
+            API with JSON return</strong></a>
       </div>
       <div class="col-12 col-sm-4 mb-3">
         <a href="#" class="btn display-3 rounded-1 py-3 px-4" style="width: 100%" role="button"><strong>SAM Activity 5:
