Capitalization of Comments

--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
     </ul>
   </section>
 
-  <!-- skills -->
+  <!-- Skills -->
   <div id="skills" class="container-fluid my-5 py-5" style="background-color: var(--secondary-color)">
     <div class="row justify-content-center text-center">
       <h1 class="display-4 text-center mb-5" style="color: var(--background-color)">
@@ -639,7 +639,7 @@
     </a>
   </div>
 
-  <!-- works -->
+  <!-- Works -->
   <div class="container" id="works">
     <h1 class="display-4 text-center my-5">Recent Works</h1>
     <div class="row justify-content-center">
@@ -683,7 +683,7 @@
     </div>
   </div>
 
-  <!-- footer -->
+  <!-- Footer -->
   <footer class="footer text-center py-5">
     <div class="container-fluid d-flex justify-content-center">
       <a href="https://kayexnina.github.io/index.html"><img
