inserting the logo again

--- a/SAM02_Cristobal/explore.html
+++ b/SAM02_Cristobal/explore.html
@@ -438,7 +438,7 @@
     <!-- Footer -->
     <footer class="text-center py-5">
       <div class="container-fluid d-flex justify-content-center">
-        <a href="index.html"><img src="./assets/sanpabLogo.png" alt="Logo" class="img-fluid"
+        <a href="index.html"><img src="https://raw.githubusercontent.com/kayexnina/SAMA02_Cristobal/refs/heads/main/assets/sanpabLogo.png" alt="Logo" class="img-fluid"
             style="max-width: 150px;"></a>
       </div>
 
