--- a/SAM04_Cristobal/list.html
+++ b/SAM04_Cristobal/list.html
@@ -7,6 +7,8 @@
     <title>Grey's Anatomy</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
     <style>
         :root {
             --primary-color: #112967;
@@ -21,11 +23,13 @@
         }
 
         body {
-            /* background-image: url('bgImage.jpg'); */
-            background-color: #ffffff;
+            background-image: url(./mainBg.png);
             background-size: cover;
             background-position: center;
             display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
         }
 
         .btn {
@@ -34,7 +38,6 @@
             text-decoration: none;
             font-size: 16px;
             border: 1px solid var(--secondary-color);
-            text-align: center;
             transition: background-color 0.3s ease;
         }
 
@@ -49,122 +52,224 @@
             width: 18rem;
             height: 100%;
         }
+
+        .left,
+        .right {
+            position: absolute;
+            top: 53%;
+            transform: translateY(-50%);
+            cursor: pointer;
+            font-size: 20px;
+        }
+
+        .left {
+            left: 20px;
+
+        }
+
+        .right {
+            right: 20px;
+        }
+
+        .scroll-images {
+            width: 100%;
+            height: auto;
+            scroll-behavior: smooth;
+            -webkit-overflow-scrolling: touch;
+            display: flex;
+            overflow-x: auto;
+            gap: 5px;
+            padding-right: 50px;
+        }
+
+        .scroll-images::-webkit-scrollbar {
+            display: none;
+        }
+
+        .child {
+            flex: 0 0 auto;
+            max-width: 500px;
+            height: 200px;
+            padding: 0 15px;
+            margin: 0 10px;
+            border: 1px solid #f1f1f1;
+            box-shadow: 0 0 15px 2px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            background-color: var(--secondary-color);
+            border-radius: 20px;
+        }
+
+        .image-container img {
+            width: 100px;
+            height: 100px;
+            object-fit: cover;
+            border-radius: 50%;
+            text-decoration: none;
+        }
+
+        .text-container h4 {
+            font-size: 1.2rem;
+            font-weight: bold;
+            color: var(--primary-color);
+        }
+
+        a {
+            text-decoration: none;
+        }
+
+        .pagination-container {
+            text-align: center;
+        }
+
+        .pagination .page-item.active .page-link {
+            background-color: var(--primary-color);
+            color: var(--secondary-color);
+            border: 1px solid var(--primary-color);
+        }
+
+        .pagination .page-item .page-link {
+            color: var(--primary-color);
+            font-size: 12px;
+            border: 1px solid var(--primary-color);
+            border-radius: 100%;
+        }
+
+        .pagination .page-item .page-link:hover {
+            background-color: var(--primary-color);
+            color: var(--secondary-color);
+            border-color: var(--primary-color);
+        }
+
+        .pagination .page-item.disabled .page-link {
+            background-color: var(--primary-color);
+            color: var(--secondary-color);
+            border-color: var(--primary-color);
+        }
     </style>
 </head>
 
 <body>
     <div class="container">
-        <div class="row mt-5">
-            <div class="col">
-                <div class="display-3">Character List</div>
-            </div>
-        </div>
         <div class="row">
-            <div class="col text-center">
-                <nav aria-label="Page navigation example">
-                    <ul class="pagination">
-                        <li class="page-item">
-                            <a id="prevButton" class="disabled page-link" onclick="prevPage()">Previous</a>
-                        </li>
-                        <li class="page-item">
-                            <a id="nextButton" class="page-link" onclick="nextPage()">Next</a>
-                        </li>
-                    </ul>
-                </nav>
+            <div class="col">
+                <h1 class="display-3 m-2" style="color: var(--primary-color); font-weight: bolder; text-align: center;">
+                    Character List</h1>
+                <p class="m-2" style="color: #11296794; font-size: small; text-align: center;">
+                    Simply click on a
+                    character's card to learn
+                    more about their journey, role, and 
+                    memorable moments in the series.</p>
             </div>
         </div>
-        <div class="row" id="characContainer">
-            <!-- Character cards will be inserted here -->
+
+        <div class="row justify-content-center">
+            <div class="col">
+                <button class="left btn btn-light text-center" onclick="leftScroll()">
+                    <i class="fas fa-angle-double-left"></i>
+                </button>
+            </div>
+
+            <div class="col-6 scroll-images d-flex overflow-auto px-5 align-items-center justify-content-start"
+                id="characContainer">
+                <!-- Character cards will be inserted here -->
+            </div>
+
+            <div class="col">
+                <button class="right btn btn-light text-center" onclick="rightScroll()">
+                    <i class="fas fa-angle-double-right"></i>
+                </button>
+            </div>
+        </div>
+
+        <!-- Pagination -->
+        <div class="row">
+            <div class="col-12 pagination-container mt-3 px-5">
+                <ul class="pagination justify-content-center">
+                    <li class="page-item m-1 active"><a class="page-link" href="#" onclick="changePage(1)">1</a></li>
+                    <li class="page-item m-1"><a class="page-link" href="#" onclick="changePage(2)">2</a></li>
+                    <li class="page-item m-1"><a class="page-link" href="#" onclick="changePage(3)">3</a></li>
+                    <li class="page-item m-1"><a class="page-link" href="#" onclick="changePage(4)">4</a></li>
+                    <li class="page-item m-1"><a class="page-link" href="#" onclick="changePage(5)">5</a></li>
+                    <li class="page-item m-1"><a class="page-link" href="#" onclick="changePage(6)">6</a></li>
+                    <li class="page-item m-1"><a class="page-link" href="#" onclick="changePage(7)">7</a></li>
+                    <li class="page-item m-1"><a class="page-link" href="#" onclick="changePage(8)">8</a></li>
+                </ul>
+            </div>
         </div>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-        </script>
 
     <script>
         var container = document.getElementById("characContainer");
-        var perPageCount = 8;
+        var perPageCount = 5;
         var page = 1;
+        var totalCharacters = 39;
+        var totalPages = Math.ceil(totalCharacters / perPageCount);
 
         const getCharacterData = async () => {
-            // Adjusted API endpoint and loop for pagination logic
             var response = await fetch(`https://api.tvmaze.com/shows/67/cast`);
             var data = await response.json();
 
-            // Loop through each character (this assumes the API returns a list of characters)
+            container.innerHTML = '';
+
             for (var i = (page - 1) * perPageCount; i < page * perPageCount && i < data.length; i++) {
                 var character = data[i];
 
-                // Determine background color based on gender
-                var backgroundColor = character.person.gender === "Female" ? "white" : "#9dabcf"; // White for Female, Primary color (blue) for Male
-
                 var content = `
-  <div class="col-12 col-md-4 col-lg-3 m-4">
-    <div class="card mx-auto" style="width: 18rem; background-color: ${backgroundColor};">
-      <img src="${character.person.image.medium}" class="card-img-top" alt="${character.person.name}">
-      <div class="card-body text-center">
-        <h3>${character.character.name}</h3>
-<a href="view.html?characterName=${encodeURIComponent(character.character.name)}&personName=${encodeURIComponent(character.person.name)}&birthday=${encodeURIComponent(character.person.birthday)}&gender=${encodeURIComponent(character.person.gender)}&characterLink=${encodeURIComponent(character.character.url)}&characterImage=${encodeURIComponent(character.person.image.medium)}" class="btn btn-primary">View More</a>
-      </div>
-    </div>
-  </div>
-`;
-
+            <div class="col-12 col-md-6 col-lg-3 m-2">
+                <a href="view.html?characterName=${encodeURIComponent(character.character.name)}&personName=${encodeURIComponent(character.person.name)}&birthday=${encodeURIComponent(character.person.birthday || 'N/A')}&gender=${encodeURIComponent(character.person.gender)}&characterLink=${encodeURIComponent(character.character.url)}&characterImage=${encodeURIComponent(character.person.image.medium)}" class="child d-flex flex-column align-items-center m-3">
+                    <div class="image-container mt-4 mb-3">
+                        <img src="${character.person.image.medium}" alt="${character.person.name}" class="rounded-circle img-fluid">
+                    </div>
+                    <div class="text-container">
+                        <h4>${character.character.name}</h4>
+                    </div>
+                </a>
+            </div>
+        `;
                 container.innerHTML += content;
             }
         };
 
         getCharacterData();
 
-        var nextButton = document.getElementById("nextButton");
-        var prevButton = document.getElementById("prevButton");
-
-        var perPageCount = 8; // Number of characters per page
-        var page = 1;
-        var totalCharacters = 39; // Total number of characters available
-        var totalPages = Math.ceil(totalCharacters / perPageCount);
-
-        var nextButton = document.getElementById("nextButton");
-        var prevButton = document.getElementById("prevButton");
-
-        function nextPage() {
-            page += 1;
-
-            if (page >= totalPages) {
-                page = totalPages; // Ensure the page doesn't exceed the total number of pages
-                nextButton.classList.add("disabled"); // Disable "Next" button when on the last page
-            } else {
-                nextButton.classList.remove("disabled");
-            }
-
-            if (page > 1) {
-                prevButton.classList.remove("disabled"); // Enable "Previous" button
-            }
-
-            container.innerHTML = "";
+        // Pagination
+        function changePage(pageNumber) {
+            page = pageNumber;
             getCharacterData();
+            updatePagination();
+
+            var characContainer = document.getElementById('characContainer');
+            characContainer.scrollLeft = 0;
         }
 
-        function prevPage() {
-            page -= 1;
-
-            if (page <= 1) {
-                page = 1; // Ensure the page doesn't go below 1
-                prevButton.classList.add("disabled"); // Disable "Previous" button when on the first page
-            } else {
-                prevButton.classList.remove("disabled");
-            }
-
-            if (page < totalPages) {
-                nextButton.classList.remove("disabled"); // Enable "Next" button if not on the last page
-            }
-
-            container.innerHTML = "";
-            getCharacterData();
+        function updatePagination() {
+            var paginationItems = document.querySelectorAll(".pagination .page-item");
+            paginationItems.forEach(function (item, index) {
+                var pageLink = item.querySelector("a");
+                if (index + 1 === page) {
+                    item.classList.add("active");
+                } else {
+                    item.classList.remove("active");
+                }
+            });
         }
 
+        // Left and Right
+        function leftScroll() {
+            document.querySelector('.scroll-images').scrollBy({
+                left: -200,
+                behavior: 'smooth'
+            });
+        }
+
+        function rightScroll() {
+            document.querySelector('.scroll-images').scrollBy({
+                left: 200,
+                behavior: 'smooth'
+            });
+        }
     </script>
+
 
 </body>
 
