--- a/SAM04_Cristobal/list.html
+++ b/SAM04_Cristobal/list.html
@@ -56,7 +56,7 @@
         .left,
         .right {
             position: absolute;
-            top: 53%;
+            top: 50%;
             transform: translateY(-50%);
             cursor: pointer;
             font-size: 20px;
@@ -194,6 +194,7 @@
                     <li class="page-item m-1"><a class="page-link" href="#" onclick="changePage(7)">7</a></li>
                     <li class="page-item m-1"><a class="page-link" href="#" onclick="changePage(8)">8</a></li>
                 </ul>
+                <button onclick="goBack()" class="btn btn-primary rounded-5 px-5" style="font-size: 14px;">Back</button>
             </div>
         </div>
     </div>
@@ -268,6 +269,11 @@
                 behavior: 'smooth'
             });
         }
+
+        // Back
+        function goBack() {
+        window.location.href = './index.html';
+    }
     </script>
 
 
