trying underline text deco

--- a/SAM04_Cristobal/view.html
+++ b/SAM04_Cristobal/view.html
@@ -60,6 +60,7 @@
             font-size: 2rem;
             font-weight: bolder;
             margin-bottom: 10px;
+            text-decoration: underline;
         }
 
         .card-text {
