--- a/SAM04_Cristobal/index.html
+++ b/SAM04_Cristobal/index.html
@@ -21,7 +21,7 @@
     }
 
     body {
-      background-image: url('bgImage.jpg');
+      background-image: url('./assets/bgImage.jpg');
       background-size: cover;
       background-position: center;
       display: flex;
@@ -30,7 +30,7 @@
     /* For mobile screens (smallest devices) */
     @media (max-width: 575px) {
       body {
-        background-image: url('bgMobile.jpg');
+        background-image: url('./assets/bgMobile.png');
         background-size: cover;
         background-position: center;
       }
@@ -66,7 +66,7 @@
           discovering that neither medicine nor relationships can be defined in black and white. Real life only comes in
           shades of grey.
         </p>
-        <a href="list.html" class="btn display-3 rounded-5 py-3 px-5"><strong>Learn More</strong></a>
+        <a href="list.html" class="btn display-3 rounded-5 py-2 px-4"><strong>Learn More</strong></a>
       </div>
     </div>
   </div>
