--- a/SAM04_Cristobal/view.html
+++ b/SAM04_Cristobal/view.html
@@ -21,7 +21,7 @@
         }
 
         body {
-            background-image: url(./mainBg.png);
+            background-image: url(./assets/mainBg.png);
             background-size: cover;
             background-position: center;
             display: flex;
