--- a/SAM04_Cristobal/index.html
+++ b/SAM04_Cristobal/index.html
@@ -30,9 +30,14 @@
     /* For mobile screens (smallest devices) */
     @media (max-width: 575px) {
       body {
-        background-image: url('./assets/bgMobile.png');
+        background-image: url('./assets/mainBg.png');
         background-size: cover;
         background-position: center;
+      }
+
+      .h1,
+      p {
+        font-size: small !important;
       }
     }
 
@@ -52,24 +57,37 @@
       text-decoration: none;
       border: 1px solid var(--primary-color);
     }
+
+    .card {
+      background-color: rgba(255, 255, 255, 0.3);
+      border: none;
+      border-radius: 10px;
+      backdrop-filter: blur(8px);
+    }
   </style>
 </head>
 
 <body>
-  <div class="container-fluid">
-    <div class="row justify-content-center align-items-center" style="height: 100vh;">
-      <div class="col-12 col-lg-6 col-md-6 text-center">
-        <h1 class="display-5 text-light" style="font-weight: bolder;">Grey's Anatomy</h1>
-        <p class="text-light">
-          The doctors of Grey Sloan Memorial Hospital deal with life-or-death consequences on a daily basis -- it's in
-          one another that they find comfort, friendship and, at times, more than friendship. Together they're
-          discovering that neither medicine nor relationships can be defined in black and white. Real life only comes in
-          shades of grey.
-        </p>
-        <a href="list.html" class="btn display-3 rounded-5 py-2 px-4"><strong>Learn More</strong></a>
+  <div class="container-fluid d-flex justify-content-center align-items-center">
+    <div class="row justify-content-center align-items-center text-center" style="height: 100vh;">
+      <div class="col-10 col-lg-6 col-md-8">
+        <div class="card p-4">
+          <h1 class="display-5" style="font-weight: bolder; color: var(--primary-color);">Grey's Anatomy</h1>
+          <p class="text-center text-dark" style="font-size: medium;">
+            The doctors of Grey Sloan Memorial Hospital deal with life-or-death consequences on a daily basis -- it's in
+            one another that they find comfort, friendship and, at times, more than friendship. Together they're
+            discovering that neither medicine nor relationships can be defined in black and white. Real life only comes
+            in
+            shades of grey.
+          </p>
+          <div class="col">
+            <a href="list.html" class="btn display-3 rounded-5 py-2 px-4"><strong>Learn More</strong></a>
+          </div>
+        </div>
       </div>
     </div>
   </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
     </script>
