--- a/SAM04_Cristobal/list.html
+++ b/SAM04_Cristobal/list.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Grey's Anatomy</title>
+    <title>All Characters</title>
+    <link rel="shortcut icon" href="./assets/greysAnaIcon.ico" type="image">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -23,7 +24,7 @@
         }
 
         body {
-            background-image: url(./mainBg.png);
+            background-image: url(./assets/mainBg.png);
             background-size: cover;
             background-position: center;
             display: flex;
@@ -157,7 +158,7 @@
                 <p class="m-2" style="color: #11296794; font-size: small; text-align: center;">
                     Simply click on a
                     character's card to learn
-                    more about their journey, role, and 
+                    more about their journey, role, and
                     memorable moments in the series.</p>
             </div>
         </div>
@@ -197,6 +198,7 @@
                 <button onclick="goBack()" class="btn btn-primary rounded-5 px-5" style="font-size: 14px;">Back</button>
             </div>
         </div>
+
     </div>
 
     <script>
@@ -236,12 +238,20 @@
         // Pagination
         function changePage(pageNumber) {
             page = pageNumber;
+            sessionStorage.setItem('lastPage', pageNumber);
             getCharacterData();
             updatePagination();
 
             var characContainer = document.getElementById('characContainer');
             characContainer.scrollLeft = 0;
         }
+
+        window.onload = function () {
+            const lastPage = sessionStorage.getItem('lastPage');
+            if (lastPage) {
+                changePage(parseInt(lastPage, 10)); // Load the saved page
+            }
+        };
 
         function updatePagination() {
             var paginationItems = document.querySelectorAll(".pagination .page-item");
@@ -272,8 +282,8 @@
 
         // Back
         function goBack() {
-        window.location.href = './index.html';
-    }
+            window.location.href = './index.html';
+        }
     </script>
 
 
