--- a/SAM04_Cristobal/view.html
+++ b/SAM04_Cristobal/view.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Character Details</title>
+    <link rel="shortcut icon" href="./assets/greysAnaIcon.ico" type="image">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
@@ -86,7 +87,6 @@
             text-decoration: none;
             border: 1px solid var(--primary-color);
         }
-
     </style>
 </head>
 
@@ -132,9 +132,9 @@
         const cardHeader = document.getElementById("cardHeader");
 
         if (gender === "Female") {
-            cardHeader.style.backgroundColor = "rgba(255, 105, 180, 0.7)"; 
+            cardHeader.style.backgroundColor = "rgba(255, 105, 180, 0.7)";
         } else {
-            cardHeader.style.backgroundColor = "rgba(70, 130, 180, 0.7)";  
+            cardHeader.style.backgroundColor = "rgba(70, 130, 180, 0.7)";
         }
 
         document.getElementById("characterName").innerText = characterName || "No character name available";
@@ -146,8 +146,12 @@
 
         // Back
         function goBack() {
-            window.location.href = './list.html';
+            // Retrieve the last page number from sessionStorage
+            const lastPage = sessionStorage.getItem('lastPage') || 1; // Default to page 1 if not found
+            window.location.href = `list.html?page=${lastPage}`;
         }
+
+
     </script>
 
 </body>
