--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
             <a class="nav-link" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#works">Works</a>
+            <a class="nav-link" href="#works">Projects</a>
           </li>
         </ul>
       </div>
@@ -641,7 +641,7 @@
 
   <!-- Works -->
   <div class="container" id="works">
-    <h1 class="display-4 text-center my-5">Recent Works</h1>
+    <h1 class="display-4 text-center my-5">Projects</h1>
     <div class="row justify-content-center">
       <div class="col-12 col-sm-4 mb-3">
         <a href="https://github.com/kayexnina/kayexnina.github.io" class="btn display-3 rounded-1 py-3 px-4"
@@ -661,8 +661,8 @@
             API with JSON return</strong></a>
       </div>
       <div class="col-12 col-sm-4 mb-3">
-        <a href="#" class="btn display-3 rounded-1 py-3 px-4" style="width: 100%" role="button"><strong>SAM Activity 5:
-            Title Here</strong></a>
+        <a href="#" class="btn display-3 rounded-1 py-3 px-4" style="width: 100%" role="button"><strong>SAM Midterm P1:
+          YouTube embed API</strong></a>
       </div>
       <div class="col-12 col-sm-4 mb-3">
         <a href="#" class="btn display-3 rounded-1 py-3 px-4" style="width: 100%" role="button"><strong>SAM Activity 6:
