--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
       </div>
       <div class="col-12 col-sm-4 mb-3">
         <a href="#" class="btn display-3 rounded-1 py-3 px-4" style="width: 100%" role="button"><strong>SAM Midterm P1:
-          YouTube embed API</strong></a>
+          Video Integration</strong></a>
       </div>
       <div class="col-12 col-sm-4 mb-3">
         <a href="#" class="btn display-3 rounded-1 py-3 px-4" style="width: 100%" role="button"><strong>SAM Activity 6:
