--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
             API with JSON return</strong></a>
       </div>
       <div class="col-12 col-sm-4 mb-3">
-        <a href="#" class="btn display-3 rounded-1 py-3 px-4" style="width: 100%" role="button"><strong>SAM Midterm P1:
+        <a href="https://kayexnina.github.io/MP01_Cristobal/index.html" class="btn display-3 rounded-1 py-3 px-4" style="width: 100%" role="button"><strong>SAM Midterm P1:
           Video Integration</strong></a>
       </div>
       <div class="col-12 col-sm-4 mb-3">
