--- a/MP01_Cristobal/index.html
+++ b/MP01_Cristobal/index.html
@@ -366,7 +366,7 @@
   </div>
 
   <!-- Members Section -->
-  <div class="container" id="members">
+  <div class="container">
     <div class="row my-4">
       <h1 class="display-3 text-center" style="font-weight: 700;">
         <img src="./assets/biniLogo.png" alt="BINI Logo" class="logo-img"> Members
@@ -375,7 +375,7 @@
     </div>
 
     <!-- Member Cards -->
-    <div class="row">
+    <div class="row" id="members">
       <div class="col-12 col-md-6 col-lg-3 mb-4 d-flex justify-content-center">
         <div class="flip-card">
           <div class="flip-card-inner">
